[package]
name = "kendallspy"
version = "0.1.0"
authors = ["zolkko <zolkko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kendallspy"
crate-type = ["cdylib"]

[dependencies]
kendalls = "0.1"
pyo3 = { version = "0.12", features = ["extension-module"] }
numpy = { version = "0.12" }
